--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,12 @@ cw2 = "1.1.0"
 schemars = "0.8.10"
 serde = { version = "1.0.145", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.31" }
+serde-json-wasm = "0.4.1"
+serde_json = "1.0.107"
+base64 = "0.13.0"
+cw20 = "0.16"
 
 [dev-dependencies]
 cw-multi-test = "0.16.5"
+serde-json-wasm = "0.4.1"
+
